@startuml
class Usuario {
  - id: Integer
  - email: String
  - firstName: String
  - lastName: String
  --
  + getCasas()
}

class Casa {
  - id: Integer
  - nome: String
  - endereco: String
  - timezone: String
  - usuarioId: Integer
  --
  + getComodos()
  + getCenas()
}

class Comodo {
  - id: Integer
  - nome: String
  - backgroundUrl: String
  - casaId: Integer
  --
  + getDispositivos()
  + controlarTodos(estado: Boolean)
}

class TipoDispositivo {
  - id: Integer
  - nome: String
  - categoria: String
  - icone: String
}

class Dispositivo {
  - id: Integer
  - nome: String
  - estado: Boolean
  - ativo: Boolean
  - tipoId: Integer
  - comodoId: Integer
  --
  + ligar()
  + desligar()
  + alternarEstado()
}

class Cena {
  - id: Integer
  - nome: String
  - descricao: String
  - ativa: Boolean
  - favorita: Boolean
  - indisponivelAte: DateTime
  - casaId: Integer
  --
  + executar()
  + adicionarAcao(acao: AcaoCena)
  + marcarFavorita()
}

class AcaoCena {
  - id: Integer
  - ordem: Integer
  - intervaloTempo: Float
  - estadoDesejado: Boolean
  - condicional: Boolean
  - dispositivoId: Integer
  - cenaId: Integer
}

class LogDispositivo {
  - id: Integer
  - estadoAnterior: Boolean
  - estadoNovo: Boolean
  - origem: String
  - timestamp: DateTime
  - dispositivoId: Integer
  - usuarioId: Integer
  - cenaId: Integer
}

Usuario "1" -- "0..*" Casa : possui
Casa "1" -- "0..*" Comodo : contém
Casa "1" -- "0..*" Cena : possui
Comodo "1" -- "0..*" Dispositivo : contém
TipoDispositivo "1" -- "0..*" Dispositivo : classifica
Cena "1" -- "0..*" AcaoCena : contém
Dispositivo "1" -- "0..*" AcaoCena : é alvo de
Dispositivo "1" -- "0..*" LogDispositivo : gera
Usuario "1" -- "0..*" LogDispositivo : executa
Cena "1" -- "0..*" LogDispositivo : origina
@enduml